# waybar-scrolling-mpris

./: CMakeLists.txt  config.cpp  config.hpp  playerctl_helper.cpp  playerctl_helper.hpp  readme.md  util.hpp  waybar-scrolling-mpris.c  waybar-scrolling-mpris.cpp
